--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
       href="https://fontlibrary.org//face/chomsky"
       type="text/css"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/index-style.css" />
 
     <title>NMNews</title>
@@ -39,37 +42,88 @@
       </div>
     </header>
     <main>
-    <section class="top-bar">
+      <section class="top-bar">
         <h3 class="top-bar__data">Wednesday, October 26, 2022</h3>
         <h3 class="top-bar__subscribe">Subscribe for $0.25/week</h3>
-    </section>
+      </section>
     </main>
     <aside></aside>
     <footer>
-        <h2 class="footer__brand-logo"><a href="#" class="footer__title"> NMNews</a></h2>
-        <div class="container-footer">
-            <input type="checkbox" id="menu-footer" class="container-footer__button" />
-            <label for="menu-footer" class="container-footer__label">
-            <span class="footer__menu">noticia 1</span>
-            </label>
-            <nav class="container-footer__menu">
-            <ul class="container-footer__list">
-                <li class="container-footer__item"><a href="#">opcao 1</a></li>
-                <li class="container-footer__item"><a href="#">opcao 2</a></li>
-                <li class="container-footer__item"><a href="#">opcao 3</a></li>
-                <li class="container-footer__item"><a href="#">opcao 4</a></li>
-                <li class="container-footer__item"><a href="#">opcao 5</a></li>
-            </ul>
-            </nav>
-        </div>
-
-        <input id="check01" type="checkbox" name="menu" />
-<label for="check01">Menu</label>
-<ul class="submenu">
-  <li><a href="#">Item 1</a></li>
-  <li><a href="#">Item 2</a></li>
-</ul>
-
+      <h2 class="footer__brand-logo">
+        <a href="#" class="footer__title"> NMNews</a>
+      </h2>
+      <div class="container-footer">
+        <input
+          type="checkbox"
+          id="menu-footer-check01"
+          class="container-footer__button"
+        />
+        <label for="menu-footer-check01" class="container-footer__label">
+          <span class="footer__menu">noticia teste</span>
+        </label>
+        <nav class="container-footer__menu">
+          <ul class="container-footer__list">
+            <li class="container-footer__item"><a href="#">opcao 1</a></li>
+            <li class="container-footer__item"><a href="#">opcao 2</a></li>
+            <li class="container-footer__item"><a href="#">opcao 3</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="container-footer">
+        <input
+          type="checkbox"
+          id="menu-footer-check02"
+          class="container-footer__button"
+        />
+        <label for="menu-footer-check02" class="container-footer__label">
+          <span class="footer__menu">noticia teste2</span>
+        </label>
+        <nav class="container-footer__menu">
+          <ul class="container-footer__list">
+            <li class="container-footer__item"><a href="#">opcao 1</a></li>
+            <li class="container-footer__item"><a href="#">opcao 2</a></li>
+            <li class="container-footer__item"><a href="#">opcao 3</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="container-footer">
+        <input
+          type="checkbox"
+          id="menu-footer-check03"
+          class="container-footer__button"
+        />
+        <label for="menu-footer-check03" class="container-footer__label">
+          <span class="footer__menu">noticia teste3</span>
+        </label>
+        <nav class="container-footer__menu">
+          <ul class="container-footer__list">
+            <li class="container-footer__item"><a href="#">opcao 1</a></li>
+            <li class="container-footer__item"><a href="#">opcao 2</a></li>
+            <li class="container-footer__item"><a href="#">opcao 3</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="line-footer"></div>
+      <div class="copright-footer">
+        <p class ="copyright-footer__text">&copy; Copyright - NMNews Ltda. - 2022</p> 
+      </div>
+      <div class="other-info-footer">
+      <h4 class="other-info-footer__item"><a href="#">teste </a></h4>
+      <h4 class="other-info-footer__item"><a href="#">teste </a></h4>
+      <h4 class="other-info-footer__item"><a href="#">teste </a></h4>
+      <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
+      <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
+      <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
+      <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
+      <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
+      <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
+      <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
+      <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
+      <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
+      <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
+      <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
+      <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
+      </div>
     </footer>
   </body>
 </html>
