--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
         <h3 class="top-bar__data">Wednesday, October 26, 2022</h3>
         <h3 class="top-bar__subscribe">Subscribe for $0.25/week</h3>
       </section>
+      <section class="news-main">
+        <div class="news-main__live"><p><span class="news-main__live-text">Live</span> 29m ago</p></div>
+        <article>
+          <div class="news-main__title">Putin Rails Against "BLA BLA BLA" in speech aimed 
+          at U.S. Conservatives</div>
+          <div class="news-main__abstract">Mussum Ipsum, cacilds vidis litro abertis. Nullam volutpat risus nec leo commodo, ut interdum diam laoreet. Sed non consequat odio.Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis!Vehicula non. Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum.
+          </div>
+        </article>
+        <div class="news-main__related"><a href="#">See more updates</a></div>
+        
+
+      
+      </section>
     </main>
     <aside></aside>
     <footer>
