Implemantation news with text and video in main

--- a/index.html
+++ b/index.html
@@ -33,12 +33,18 @@
           <span class="header__menu"></span>
         </label>
         <nav class="container__menu">
-          <ul class="container__list">
-            <li class="container__item"><a href="#">opcao 1</a></li>
-            <li class="container__item"><a href="#">opcao 2</a></li>
-            <li class="container__item"><a href="#">opcao 3</a></li>
-            <li class="container__item"><a href="#">opcao 4</a></li>
-            <li class="container__item"><a href="#">opcao 5</a></li>
+          <ul title= "News" class="container__list">
+            <li class="container__item"><a href="#">Home Page</a></li>
+            <li class="container__item"><a href="#">World</a></li>
+            <li class="container__item"><a href="#">Coronavirus</a></li>
+            <li class="container__item"><a href="#">U.S. News</a></li>
+            <li class="container__item"><a href="#">U.S. Politics</a></li>
+            <br/>
+            <li class="container__item"><a href="#">Wildfire</a></li>
+            <li class="container__item"><a href="#">Tracker</a></li>
+            <li class="container__item"><a href="#">Obituaries</li>
+            <li class="container__item"><a href="#">The Upshot</a></li>
+            <li class="container__item"><a href="#">Internacional</a></li>
           </ul>
         </nav>
         <h1 class="container__title">NMNews</h1>
@@ -47,7 +53,7 @@
     </header>
     <main>
       <section class="top-bar">
-        <h3 class="top-bar__data">Wednesday, October 26, 2022</h3>
+        <h3 class="top-bar__data">Monday, October 31, 2022</h3>
         <h3 class="top-bar__subscribe">Subscribe for $0.25/week</h3>
       </section>
       <section class="news-main">
@@ -56,22 +62,56 @@
         </div>
         <article>
           <div class="news-main__title">
-            Putin Rails Against "BLA BLA BLA" in speech aimed at U.S.
-            Conservatives
+            Putin Wants to Divide Ukrainians. Mykolaiv Is a Test Case.
           </div>
           <div class="news-main__abstract">
-            Mussum Ipsum, cacilds vidis litro abertis. Nullam volutpat risus nec
-            leo commodo, ut interdum diam laoreet. Sed non consequat
-            odio.Interessantiss quisso pudia ce receita de bolis, mais bolis eu
-            num gostis.Si u mundo tá muito paradis? Toma um mé que o mundo vai
-            girarzis!Vehicula non. Ut sed ex eros. Vivamus sit amet nibh non
-            tellus tristique interdum.
+            MYKOLAIV, Ukraine — As Elizaveta Kachuk waited in line for drinking water, 
+            a daily ritual that is not always successful, she cursed the Russians who bombed her city. 
+            But she also voiced discontent with her fellow Ukrainians still running it.
+            She has grown weary of the inability of local leaders to restore essential services. 
+            At times, tanker trucks dispensing clean water run dry before she reaches them, 
+            and she goes home empty-handed.
           </div>
         </article>
         <div class="news-main__related"><a href="#">See more updates</a></div>
       </section>
+      <section>
+        <article class="article__news1">
+          <h3 class="title__news1"><a href="#">Much of Brazil is now wondering: 
+            Will President Jair Bolsonaro accept his defeat?
+            The Latest From Brazil</a></h3>
+        </article>
+      </section>
+
+      <section>
+        <article class="article__news2">
+          <h2 class="title__news2"><a href="#">In Seoul, 
+            a Bottleneck of Revelers, a Shove and a Rushing ‘Sea of Bodies’</a></h2>
+          <p class="paragraph1_news2">There were few police officers around as a mass of revelers 
+            swelled. From within the crowd came calls to “push, push” and a big shove, 
+            according to witnesses. Then, they began to fall.</p>  
+            <p class="paragraph2_news2">6 min read</p>  
+
+           <div class="video__news2">
+            <iframe width=100% height="315" src="https://www.youtube.com/embed/qj5QFm73oYQ" 
+            title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p class="paragraph3_news2">Reuters and Associated Press</p>  
+           </div> 
+        </article>
+      </section>
+
+      <section>
+        <article class="article__news3">
+          <h3 class="title__news3"><a href="#">The Father of One U.S. Victim 
+            Found Warmth Online as Worry Became Grief</a></h3>
+            <p class="paragraph1_news3">3 min read</p>    
+        </article>
+      </section>
+
+
       <section class="carousel">
-        <h2 class="carousel__title">Últimas imagens na Ucrania</h2>
+        <h2 class="carousel__title">Latest pictures from Ukrainea</h2>
         <div class="carousel__container">
           <div class="swiper">
             <!-- Additional required wrapper -->
@@ -98,28 +138,27 @@
               <div class="swiper-slide">
                 <img src="./assets/img/teste2.png" alt="eeeeeeeeeee" />
               </div>
-            </div>
-
+            </div> 
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
           </div>
+          <div class="visitUkraine">
           <div class="card">
             <div class="card__description">
-              <div class="description">
-                <img
-                  src="./assets/img/Estrelinhas.png"
-                  alt="Avaliacao 5 estrelas"
-                />
-                <h3 class="description__title">Titulo do anuncio</h3>
-                <h2 class="description__title-product">descricao do anuncio</h2>
-                <p class="description__text">
-                  viage pra ucrania em ate 3x sem juros na ida
-                </p>
+              <p>VisitUkraine. Today is an information portal for help.
+                Recommendation by users:
+              </p>
+            </div>
+            <div class="description">
+              <img
+              src="./assets/img/Estrelinhas.png"
+              alt="Avaliacao 5 estrelas"
+              />
               </div>
               <img
                 src="./assets/img/ucraniaAnuncio.png"
                 alt="imagem ucrania"
-                              />
+                class="ukrania-Announcement"/>
             </div>
             <div class="card__button">
               <ul class="button">
@@ -129,14 +168,21 @@
                     alt="icone do instagram"
                   />
                 </li>
+                <li class="button__item">
+                  <img
+                    src="./assets/img/facebook.png"
+                    alt="icone do facebook"
+                  />
+                </li>
               </ul>
               <a href="#" class="button__anchor">Saiba mais</a>
             </div>
           </div>
         </div>
+      </div>
       </section>
     </main>
-    <aside></aside>
+    <br/><br/>
     <footer>
       <h2 class="footer__brand-logo">
         <a href="#" class="footer__title"> NMNews</a>
