Implementation main page

--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
         </article>
       </section>
 
-
       <section class="carousel">
         <h2 class="carousel__title">Latest pictures from Ukrainea</h2>
         <div class="carousel__container">
@@ -142,10 +141,11 @@
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
           </div>
+
           <div class="visitUkraine">
           <div class="card">
             <div class="card__description">
-              <p>VisitUkraine. Today is an information portal for help.
+              <p>Help Ukraine. Today is an information portal for help.
                 Recommendation by users:
               </p>
             </div>
@@ -153,30 +153,24 @@
               <img
               src="./assets/img/Estrelinhas.png"
               alt="Avaliacao 5 estrelas"
+              class="image__starts"
               />
               </div>
-              <img
-                src="./assets/img/ucraniaAnuncio.png"
-                alt="imagem ucrania"
-                class="ukrania-Announcement"/>
             </div>
-            <div class="card__button">
-              <ul class="button">
-                <li class="button__item">
-                  <img
-                    src="./assets/img/Instagram.png"
-                    alt="icone do instagram"
-                  />
-                </li>
-                <li class="button__item">
-                  <img
-                    src="./assets/img/facebook.png"
-                    alt="icone do facebook"
-                  />
-                </li>
-              </ul>
-              <a href="#" class="button__anchor">Saiba mais</a>
-            </div>
+                <div class="options__buttons">
+                    <img
+                      src="./assets/img/Instagram.png"
+                      alt="icone do instagram"
+                      class="button__item"
+                    />
+                    <img
+                      src="./assets/img/facebook.png"
+                      alt="icone do facebook"
+                      class="button__item"
+                    />                           
+                    <input type="submit" value="Start" class="send">
+                    <a href="index.html">  
+              </div>
           </div>
         </div>
       </div>
@@ -194,7 +188,7 @@
           class="container-footer__button"
         />
         <label for="menu-footer-check01" class="container-footer__label">
-          <span class="footer__menu">noticia teste</span>
+          <span class="footer__menu">News</span>
         </label>
         <nav class="container-footer__menu">
           <ul class="container-footer__list">
@@ -211,7 +205,7 @@
           class="container-footer__button"
         />
         <label for="menu-footer-check02" class="container-footer__label">
-          <span class="footer__menu">noticia teste2</span>
+          <span class="footer__menu">Opinion</span>
         </label>
         <nav class="container-footer__menu">
           <ul class="container-footer__list">
@@ -228,7 +222,7 @@
           class="container-footer__button"
         />
         <label for="menu-footer-check03" class="container-footer__label">
-          <span class="footer__menu">noticia teste3</span>
+          <span class="footer__menu">Arts</span>
         </label>
         <nav class="container-footer__menu">
           <ul class="container-footer__list">
@@ -245,21 +239,21 @@
         </p>
       </div>
       <div class="other-info-footer">
-        <h4 class="other-info-footer__item"><a href="#">teste </a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste </a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste </a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">NYCto</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Contact Us</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Acessibility</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Work with us</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Advertise</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">T Brand Studio</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Your Ad Choices</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Privacy Policy</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Terms of Service</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Terms of Sale</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Site Map</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Canada</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">International</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Help</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Substription</a></h4>
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
