--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main>
       <section class="top-bar">
         <h3 class="top-bar__data">Monday, October 31, 2022</h3>
-        <h3 class="top-bar__subscribe">Subscribe for $0.25/week</h3>
+        <h3 class="top-bar__subscribe"><a href="./subscribe.html" class="top-bar__subscribe-link">Subscribe for $0.25/week</a></h3>
       </section>
       <section class="news-main">
         <div class="news-main__live">
