--- a/subscribe.html
+++ b/subscribe.html
@@ -39,7 +39,7 @@
             <li class="container__item"><a href="#">opcao 5</a></li>
           </ul>
         </nav>
-        <h1 class="container__title">NMNews</h1>
+        <h1 class="container__title"><a href="./index.html" class="container__title-link">NMNews</a></h1>
         <img src="./assets/img/Usuario.svg" alt="" class="container__user" />
       </div>
     </header>
@@ -51,7 +51,7 @@
           per.Interessantiss quisso pudia ce receita de bolis, mais bolis eu num
           gostis.
         </p>
-        <a href="#" class="subscribe-top__button">Conheça os planos</a>
+        <a href="#plan" class="subscribe-top__button">Conheça os planos</a>
       </section>
       <section class="benefit">
         <ul class="benefit__list">
@@ -71,19 +71,19 @@
           </li>
         </ul>
       </section>
-      <section class="plan">
+      <section class="plan" id="plan">
         <h2 class="plan__title">Planos</h2>
         <ul class="plan__card">
           <li class="card">
             <h3 class="card__title">Mensal</h3>
             <article class="card__content">
-              <p class="card__price"><em>R$ dddd</em></p>
+              <p class="card__price"><em>$ 7.75 / month</em></p>
             </article>
           </li>
           <li class="card">
             <h3 class="card__title">Anual</h3>
             <article class="card__content">
-              <p class="card__price"><em>R$ ffff </em></p>
+              <p class="card__price"><em>$ 5 / month</em></p>
             </article>
           </li>
         </ul>
