update second page

--- a/secondaryNews.html
+++ b/secondaryNews.html
@@ -81,27 +81,94 @@
           </div>
         </article>
 
-         
         <div style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
           <iframe width="100%" height="100%"
             src="https://www.youtube.com/embed/OGp22B5oLZ8" 
             allowfullscreen="" style="position:absolute; top:0; left: 0">
           </iframe>
-        </div>
-
-
-          <article class="card card--emphasis">    
-            <img src="assets/img/video_1.png" alt="video" class="card__image"/>
-            <div class="card__content">
-              <p class="card__perfil">Marcelo Oliveira</p>
-              <h3 class="card__title">HZC - Title</h3>
-              <p class="card__info card__info--time">33 minutes</p>
-              <button class="card__button card__button--play" aria-label="Watch now"></button>
-            </div>      
-          </article>
-
-    
+        </div>    
       </main>
+
+      <footer>
+        <h2 class="footer__brand-logo">
+          <img src="./assets/img/logoNMNews.png" alt="brand logo NMNews" class="lateral-menu__logo" />
+        </h2>
+        <div class="container-footer">
+          <input
+            type="checkbox"
+            id="menu-footer-check01"
+            class="container-footer__button"
+          />
+          <label for="menu-footer-check01" class="container-footer__label">
+            <span class="footer__menu">News</span>
+          </label>
+          <nav class="container-footer__menu">
+            <ul class="container-footer__list">
+              <li class="container-footer__item"><a href="#">Politics</a></li>
+              <li class="container-footer__item"><a href="#">Sports</a></li>
+              <li class="container-footer__item"><a href="#">Business</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="container-footer">
+          <input
+            type="checkbox"
+            id="menu-footer-check02"
+            class="container-footer__button"
+          />
+          <label for="menu-footer-check02" class="container-footer__label">
+            <span class="footer__menu">Opinion</span>
+          </label>
+          <nav class="container-footer__menu">
+            <ul class="container-footer__list">
+              <li class="container-footer__item"><a href="#">Marcelo Oliveira</a></li>
+              <li class="container-footer__item"><a href="#">Dulcinea Dirce</a></li>
+              <li class="container-footer__item"><a href="#">Juliana da Silva</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="container-footer">
+          <input
+            type="checkbox"
+            id="menu-footer-check03"
+            class="container-footer__button"
+          />
+          <label for="menu-footer-check03" class="container-footer__label">
+            <span class="footer__menu">Arts</span>
+          </label>
+          <nav class="container-footer__menu">
+            <ul class="container-footer__list">
+              <li class="container-footer__item"><a href="#">Shows</a></li>
+              <li class="container-footer__item"><a href="#">Exposition</a></li>
+              <li class="container-footer__item"><a href="#">Theaters</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="line-footer"></div>
+        <div class="copright-footer">
+          <p class="copyright-footer__text">
+            &copy; Copyright - NMNews Ltda. - 2022
+          </p>
+        </div>
+        <div class="other-info-footer">
+          <h4 class="other-info-footer__item"><a href="#">NYCto</a></h4>
+          <h4 class="other-info-footer__item"><a href="#">Contact Us</a></h4>
+          <h4 class="other-info-footer__item"><a href="#">Acessibility</a></h4>
+          <h4 class="other-info-footer__item"><a href="#">Work with us</a></h4>
+          <h4 class="other-info-footer__item"><a href="#">Advertise</a></h4>
+          <h4 class="other-info-footer__item"><a href="#">T Brand Studio</a></h4>
+          <h4 class="other-info-footer__item"><a href="#">Your Ad Choices</a></h4>
+          <h4 class="other-info-footer__item"><a href="#">Privacy Policy</a></h4>
+          <h4 class="other-info-footer__item"><a href="#">Terms of Service</a></h4>
+          <h4 class="other-info-footer__item"><a href="#">Terms of Sale</a></h4>
+          <h4 class="other-info-footer__item"><a href="#">Site Map</a></h4>
+          <h4 class="other-info-footer__item"><a href="#">Canada</a></h4>
+          <h4 class="other-info-footer__item"><a href="#">International</a></h4>
+          <h4 class="other-info-footer__item"><a href="#">Help</a></h4>
+          <h4 class="other-info-footer__item"><a href="#">Substription</a></h4>
+        </div>
+      </footer>
+
 
   </body>
 </html>
