--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
         </label>
         <nav class="container-footer__menu">
           <ul class="container-footer__list">
-            <li class="container-footer__item"><a href="#">opcao 1</a></li>
-            <li class="container-footer__item"><a href="#">opcao 2</a></li>
-            <li class="container-footer__item"><a href="#">opcao 3</a></li>
+            <li class="container-footer__item"><a href="#">News</a></li>
+            <li class="container-footer__item"><a href="#">Arts</a></li>
+            <li class="container-footer__item"><a href="#">Video</a></li>
           </ul>
         </nav>
       </div>
