--- a/secondaryNews.html
+++ b/secondaryNews.html
@@ -30,7 +30,7 @@
     <nav class="lateral-menu">
     
         <img src="./assets/img/logoNMNews.png" alt="brand logo NMNews" class="lateral-menu__logo" />
-        <a href="index.html" class="lateral-menu__link lateral-menu__link--start lateral-menu__link--active">Start</a>
+        <a href="index.html" class="lateral-menu__link lateral-menu__link--start lateral-menu__link--active">Home</a>
         <a href="#" class="lateral-menu__link lateral-menu__link--videos">Vídeos</a>
         <a href="#" class="lateral-menu__link lateral-menu__link--locals">Locals</a>
         <a href="subscribe.html" class="lateral-menu__link lateral-menu__link--members">Subscribe</a>
