Update names menu

--- a/forms.html
+++ b/forms.html
@@ -150,8 +150,8 @@
           <nav class="container-footer__menu">
             <ul class="container-footer__list">
               <li class="container-footer__item"><a href="#">Marcelo Oliveira</a></li>
-              <li class="container-footer__item"><a href="#">Dulcinea Dirce</a></li>
-              <li class="container-footer__item"><a href="#">Juliana da Silva</a></li>
+              <li class="container-footer__item"><a href="#">Nathan Lubawski</a></li>
+              <li class="container-footer__item"><a href="#">Michael</a></li>
             </ul>
           </nav>
         </div>
