--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
         </label>
         <nav class="container-footer__menu">
           <ul class="container-footer__list">
-            <li class="container-footer__item"><a href="#">opcao 1</a></li>
-            <li class="container-footer__item"><a href="#">opcao 2</a></li>
-            <li class="container-footer__item"><a href="#">opcao 3</a></li>
+            <li class="container-footer__item"><a href="#">Politics</a></li>
+            <li class="container-footer__item"><a href="#">Sports</a></li>
+            <li class="container-footer__item"><a href="#">Business</a></li>
           </ul>
         </nav>
       </div>
@@ -209,9 +209,9 @@
         </label>
         <nav class="container-footer__menu">
           <ul class="container-footer__list">
-            <li class="container-footer__item"><a href="#">opcao 1</a></li>
-            <li class="container-footer__item"><a href="#">opcao 2</a></li>
-            <li class="container-footer__item"><a href="#">opcao 3</a></li>
+            <li class="container-footer__item"><a href="#">Marcelo Oliveira</a></li>
+            <li class="container-footer__item"><a href="#">Nathan Lubawski</a></li>
+            <li class="container-footer__item"><a href="#">Michael</a></li>
           </ul>
         </nav>
       </div>
@@ -226,9 +226,9 @@
         </label>
         <nav class="container-footer__menu">
           <ul class="container-footer__list">
-            <li class="container-footer__item"><a href="#">News</a></li>
-            <li class="container-footer__item"><a href="#">Arts</a></li>
-            <li class="container-footer__item"><a href="#">Video</a></li>
+            <li class="container-footer__item"><a href="#">Shows</a></li>
+            <li class="container-footer__item"><a href="#">Exposition</a></li>
+            <li class="container-footer__item"><a href="#">Theaters</a></li>
           </ul>
         </nav>
       </div>
