--- a/secondaryNews.html
+++ b/secondaryNews.html
@@ -48,7 +48,7 @@
         <img src="./assets/img/Adds.PNG" class="image__adds">
         <article class="card card--emphasis video-emphasis">
     
-          <img src="assets/img/LulaPresident.PNG" alt="card banner" class="card__image card__image--mobile"/>
+          <img src="assets/img/LulaPresident.png" alt="card banner" class="card__image card__image--mobile"/>
           <img src="assets/img/banner_1.png" alt="card banner" class="card__image card__image--desktop"/>
           <div class="card__content">
             <p class="card__emphasis">Luiz Inácio Lula da Silva, the leftist candidate who was elected president, 
