link to contact us

--- a/subscribe.html
+++ b/subscribe.html
@@ -160,7 +160,7 @@
       </div>
       <div class="other-info-footer">
         <h4 class="other-info-footer__item"><a href="#">NYCto</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">Contact Us</a></h4>
+        <h4 class="other-info-footer__item"><a href="forms.html">Contact Us</a></h4>
         <h4 class="other-info-footer__item"><a href="#">Acessibility</a></h4>
         <h4 class="other-info-footer__item"><a href="#">Work with us</a></h4>
         <h4 class="other-info-footer__item"><a href="#">Advertise</a></h4>
